GTK 3.22/3.20 mate-panel: reduce label width to prevent truncation Needed with latest mate-applets builds

--- a/UbuntuStudio_Legacy/gtk-3.20/panel.css
+++ b/UbuntuStudio_Legacy/gtk-3.20/panel.css
@@ -50,7 +50,7 @@ MatePanelAppletFrameDBus>MatePanelAppletFrameDBus{
 
 /*Stop jumping cpufreq labels with bold text*/
 #PanelApplet>widget>box>box>label{
-	min-width: 35px;
+	min-width: 30px;
 }
 /*Stop jumping hardware monitor labels with bold text */
 #PanelApplet>grid>label{
